# Aethens

./: .gitignore  Aetheris Architecture v1.0 (living spec)-20260709161540.md  CHANGESET_IMPLEMENTATION_REPORT.md  PHASE0_BLOCKER_FIX_REPORT.md  README.md  TRACE_REPLAY_IMPLEMENTATION_REPORT.md  fix_phase0_blockers.py  package-lock.json  pyproject.toml  reasoning_off_events.jsonl  reasoning_on_events.jsonl  test_output.txt  tmp_smoke_repoaware.py  wf_ctrl_mem.jsonl  wf_events.jsonl  wf_queue.jsonl
.aetheris_data/: events.jsonl  queue.jsonl
architecture/: ARCHITECTURE_BASELINE.md  CHANGESET_ROLLBACK_RECEIPT_CONTRACT.md  RECOVERY_DRILL_HARNESS.md  TRACE_REPLAY_CONTRACT.md  authority.json  capabilities.json
code_repo/: test_main.py
scripts/: check_architecture_integrity.py  inspect_changes.py  inspect_trace.py  recovery_fixtures.py  run_hierarchy_gate.py  run_reasoning_gate.py  run_recovery_drill.py  run_reliability_coverage_canary.py  run_reliability_eval_gate.py  run_reliability_gate.py  run_research_gate.py  run_research_hardening.py  run_research_wide_gate.py  run_unattended_gate.py
shell/: .env  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
tests/: test_api.py  test_architecture_integrity.py  test_autonomous.py  test_boundary_architecture.py  test_changeset.py  test_changeset_authority.py  test_changeset_model.py  test_changeset_projection.py  test_changeset_receipts.py  test_changeset_safety.py  test_ci_contract.py  test_cli_validation_linkage.py  test_code_repair_loop.py  test_controller.py  (+53 more)
(+253 files in other folders)
