[project]
name = "aetheris"
version = "0.1.0"
description = "Aetheris agent system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=7.0", "ruff>=0.6", "pre-commit>=3.7", "httpx>=0.27"]

[project.scripts]
aetheris = "aetheris.__main__:main"
aetheris-api = "aetheris.api.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aetheris"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
